
==== Factories can produce bean from fields

Beans defined with the ann:context.annotation.Factory[] annotation can now produce beans from public or package protected fields, for example:

snippet::io.micronaut.docs.factories.VehicleMockSpec[tags="class",indent=0]

For more information see the <<factories, Bean Factories>> section of the documentation.

=== AOP Features

==== Support for Constructor Interception

It is now possible to intercept bean construction invocations through the api:aop.ConstructorInterceptor[] interface and ann:aop.AroundConstruct[] annotation.

See the section on <<lifecycleAdvise, Bean Life Cycle Advice>> for more information.

==== Support for `@PostConstruct` & `@PreDestroy` Interception

It is now possible to intercept `@PostConstruct` and `@PreDestroy` method invocations through the api:aop.MethodInterceptor[] interface and ann:aop.InterceptorBinding[] annotation.

See the section on <<lifecycleAdvise, Bean Life Cycle Advice>> for more information.

=== Module Upgrades

==== Micronaut Data 2.4.0

Huge https://micronaut-projects.github.io/micronaut-data/latest/guide/[Micronaut Data] update including many new features including:

- Full support for immutable entities. You can use Java 16 records or Kotlin immutable data classes
- Integrated support for R2DBC, now the `data-r2dbc` module is a part of the data project and shares the same code with JDBC
- Optimistic locking for JDBC/R2DBC
- Repositories now support batch insert/update/delete even with a custom query
- Rewritten entity mapper allows more complex mapping for JDBC/R2DBC entities
- Support for `@JoinTable` and `@JoinColumn` annotations
- A lot of bugfixes!

==== Micronaut Micrometer 3.4.0
