@@ -32,6 +32,14 @@ snippet::io.micronaut.docs.factories.VehicleMockSpec[tags="class",indent=0]
 
 For more information see the <<factories, Bean Factories>> section of the documentation.
 
+==== Support for Fields in Bean Introspections in Java
+
+Bean introspections on Java public or package protected fields are now supported:
+
+snippet::io.micronaut.docs.ioc.beans.User[tags="class", indent=0]
+
+For more information see the "Bean Fields" section of the <<introspection, Bean Introspections>> documentation.
+
 === AOP Features
 
 ==== Support for Constructor Interception
